Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76875

DragHandler doesn't respect acceptedButtons

XMLWordPrintable

    • 1982d1b1aa55ae44a1a775a5745e5c2f11001398 (qt/qtdeclarative/5.12)

      Setting acceptedButtons in the following example doesn't work. You can still drag by pressing the right mouse button.

          DragHandler {
              target: null
              enabled: mouseEnabled
              acceptedButtons: Qt.LeftButton
              onCentroidChanged: {
                  print(centroid.pressedButtons)
              }
          }

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes